Added dataloader and graphviz

--- a/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
+++ b/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
@@ -1232,9 +1232,11 @@
         "import pandas as pd\n",
         "import torch\n",
         "import torch.nn as nn\n",
+        "import torchviz\n",
         "import torchvision\n",
         "import torchvision.transforms as transforms\n",
         "from torch.utils.data import Dataset, DataLoader\n",
+        "from torch.utils.data.sampler import SubsetRandomSampler\n",
         "import matplotlib.pyplot as plt\n",
         "# %matplotlib notebook\n",
         "%matplotlib inline\n",
@@ -1379,21 +1381,124 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nFZNbfdUJ4Pm"
+        "id": "ZCyVNTGZQUgV"
       },
       "source": [
-        "# define pre-processing steps on the images\n",
-        "# also called \"data augementation\" (only done for the train set)\n",
-        "transform_train = transforms.Compose([\n",
-        "    transforms.RandomHorizontalFlip(),\n",
-        "    transforms.ToTensor(),\n",
-        "    transforms.Normalize((0.4914,), (0.2023,)),\n",
+        "MNIST_CHECKPOINT_DIR = 'checkpoints_MNIST'\n",
+        "MNIST_DATASET_DIR = 'datasets_MNIST'\n",
+        "\n",
+        "# create checkpoint directory to save model results\n",
+        "if not os.path.isdir(MNIST_CHECKPOINT_DIR):\n",
+        "    os.mkdir(MNIST_CHECKPOINT_DIR)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wGydMOYSME7j"
+      },
+      "source": [
+        "def get_data_transform():\n",
+        "    \"\"\"Define the data augmentation to apply on the train, validation and test\"\"\"\n",
+        "\n",
+        "    train_transform = transforms.Compose([\n",
+        "        #transforms.RandomAffine(degrees=10),\n",
+        "        #transforms.ColorJitter(brightness=0.1, contrast=0.1),\n",
+        "        transforms.RandomHorizontalFlip(p=0.5),\n",
+        "        transforms.ToTensor(),\n",
+        "        transforms.Normalize((0.4914,), (0.2023,),),\n",
+        "        AddGaussianNoise(0., 1.),\n",
         "    ])\n",
-        "# Normalize the test set same as training set without augmentation\n",
-        "transform_test = transforms.Compose([\n",
-        "    transforms.ToTensor(),\n",
-        "    transforms.Normalize((0.4914,), (0.2023,)),\n",
-        "    ])"
+        "\n",
+        "    valid_transform = transforms.Compose([\n",
+        "        transforms.ToTensor(),\n",
+        "        transforms.Normalize((0.4914,), (0.2023,),),\n",
+        "    ])\n",
+        "\n",
+        "    test_transform = transforms.Compose([\n",
+        "        transforms.ToTensor(),\n",
+        "        transforms.Normalize((0.4914,), (0.2023,),),\n",
+        "    ])\n",
+        "\n",
+        "    return train_transform, valid_transform, test_transform"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "10j3sjgtMi36"
+      },
+      "source": [
+        "def get_dataset(train_transform, valid_transform, test_transform, data_dir):\n",
+        "    \"\"\"Get the datasets for train, validation and test\"\"\"\n",
+        "    train_dataset = datasets.FashionMNIST(\n",
+        "        root=data_dir, train=True, transform=train_transform, download=True\n",
+        "    )\n",
+        "    valid_dataset = datasets.FashionMNIST(\n",
+        "        root=data_dir, train=True, transform=valid_transform, download=True\n",
+        "    )\n",
+        "    test_dataset  = datasets.FashionMNIST(\n",
+        "        root=data_dir, train=False, transform=test_transform, download = True\n",
+        "    )\n",
+        "\n",
+        "    return train_dataset, valid_dataset, test_dataset"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IgbkYkrvMi_g"
+      },
+      "source": [
+        "def get_data_loader(batch_size, valid_size=0.2, data_dir=MNIST_DATASET_DIR):\n",
+        "    \"\"\"Get the train, validation and test data loaders\"\"\"\n",
+        "\n",
+        "    error_msg = \"[!] valid_size should be in the range [0, 1].\"\n",
+        "    assert ((valid_size >= 0) and (valid_size <= 1)), error_msg\n",
+        "\n",
+        "    # get transform\n",
+        "    train_transform, valid_transform, test_transform = get_data_transform()\n",
+        "\n",
+        "    # load dataset\n",
+        "    train_dataset, valid_dataset, test_dataset = get_dataset(\n",
+        "        train_transform, valid_transform, test_transform, data_dir\n",
+        "    )\n",
+        "    \n",
+        "    # split the data\n",
+        "    num_train = len(train_dataset)\n",
+        "    indices = list(range(num_train))\n",
+        "    np.random.shuffle(indices)\n",
+        "    split = int(np.floor(valid_size * num_train))\n",
+        "    train_idx, valid_idx = indices[split:], indices[:split]\n",
+        "\n",
+        "    # shuffle\n",
+        "    train_sampler = SubsetRandomSampler(train_idx)\n",
+        "    valid_sampler = SubsetRandomSampler(valid_idx)\n",
+        "\n",
+        "    loader_settings = {\n",
+        "        'batch_size': batch_size,\n",
+        "        'num_workers': 1,\n",
+        "        'pin_memory': torch.cuda.is_available()\n",
+        "    }\n",
+        "\n",
+        "    # get dataloader objects\n",
+        "    train_loader = DataLoader(\n",
+        "        train_dataset, sampler=train_sampler, **loader_settings\n",
+        "    )\n",
+        "    valid_loader = DataLoader(\n",
+        "        valid_dataset, sampler=valid_sampler, **loader_settings\n",
+        "    )\n",
+        "    test_loader = DataLoader(\n",
+        "        test_dataset, shuffle=False, **loader_settings\n",
+        "    )\n",
+        "\n",
+        "    return train_loader, valid_loader, test_loader"
       ],
       "execution_count": null,
       "outputs": []
@@ -1405,8 +1510,7 @@
       },
       "source": [
         "# Load the dataset\n",
-        "train_set = torchvision.datasets.FashionMNIST(\"./data\", download=True, transform=transform_train)\n",
-        "test_set = torchvision.datasets.FashionMNIST(\"./data\", download=True, train=False, transform=transform_test)"
+        "train_loader, valid_loader, test_loader = "
       ],
       "execution_count": null,
       "outputs": []
@@ -1419,7 +1523,8 @@
       },
       "source": [
         "# how much data we got?\n",
-        "print('Training samples: {}, Test samples: {}'.format(train_set.data.shape[0], test_set.data.shape[0]))"
+        "print('Training samples: {}, Test samples: {}'.format(train_set.data.shape[0], \n",
+        "                                                      test_set.data.shape[0]))"
       ],
       "execution_count": null,
       "outputs": [
@@ -1487,7 +1592,10 @@
         "    return np.squeeze(image)\n",
         "\n",
         "# load n images\n",
-        "trainloader = torch.utils.data.DataLoader(train_set, batch_size=6, shuffle=True)\n",
+        "train_set = torchvision.datasets.FashionMNIST(\"./data\", download=True, \n",
+        "                                              transform=transform_train)\n",
+        "trainloader = torch.utils.data.DataLoader(train_set, batch_size=6, \n",
+        "                                          shuffle=False)\n",
         "dataiter = iter(trainloader)\n",
         "images, labels = dataiter.next()\n",
         "\n",
@@ -1526,20 +1634,6 @@
       "source": [
         "2. Next let us train a model"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-6EUaz-bJ4Po"
-      },
-      "source": [
-        "# Set data-loaders\n",
-        "batch_size = 32\n",
-        "trainloader = DataLoader(train_set, batch_size=batch_size, shuffle=True)\n",
-        "testloader = DataLoader(test_set, batch_size=batch_size)"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1614,8 +1708,10 @@
       },
       "source": [
         "# define hyper-parmeters and create our model\n",
+        "batch_size = 32\n",
         "learning_rate = 0.0001\n",
         "num_epochs = 100\n",
+        "whight_decay = learning_rate/110\n",
         "\n",
         "# device\n",
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -1627,8 +1723,16 @@
         "model = FashionMnistMLP().to(device)\n",
         "\n",
         "# optimizer\n",
-        "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+        "optimizer = torch.optim.Adam(model.parameters(), \n",
+        "                             lr=learning_rate, \n",
+        "                             amsgrad=True, \n",
+        "                             weight_decay=whight_decay)\n",
         "print(model)\n",
+        "\n",
+        "\n",
+        "# visualize computational graph\n",
+        "x = torch.randn(1, num_features).to(device) \n",
+        "torchviz.make_dot(model(x), params=dict(model.named_parameters()))\n",
         "\n",
         "# how many weights (trainable parameters) we have in our model?\n",
         "dummy_model = FashionMnistMLP()\n",
@@ -1672,7 +1776,7 @@
         "id": "fjAEo0thJ4Pp"
       },
       "source": [
-        "# function to calcualte accuracy of the model\n",
+        "# function to calcualte accuracy of the model - taken from the toturial\n",
         "def calculate_accuracy(model, dataloader, device):\n",
         "    model.eval() # put in evaluation mode\n",
         "    total_correct = 0\n",
