finish MNIST question

--- a/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
+++ b/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
@@ -2105,7 +2105,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 581
+          "height": 743
         },
         "id": "WNP09BFZd0Sk",
         "outputId": "b0ad94ae-a318-4ae9-9bfc-024cb9b958ed"
@@ -2161,158 +2161,46 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Euorn6Vwq8VN",
-        "outputId": "b80462cf-76cf-42b6-9093-6194f060041b"
-      },
-      "source": [
-        "logger['epochs']"
-      ],
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[1,\n",
-              " 2,\n",
-              " 3,\n",
-              " 4,\n",
-              " 5,\n",
-              " 6,\n",
-              " 7,\n",
-              " 8,\n",
-              " 9,\n",
-              " 10,\n",
-              " 11,\n",
-              " 12,\n",
-              " 13,\n",
-              " 14,\n",
-              " 15,\n",
-              " 16,\n",
-              " 17,\n",
-              " 18,\n",
-              " 19,\n",
-              " 20,\n",
-              " 21,\n",
-              " 22,\n",
-              " 23,\n",
-              " 24,\n",
-              " 25,\n",
-              " 26,\n",
-              " 27,\n",
-              " 28,\n",
-              " 29,\n",
-              " 30,\n",
-              " 31,\n",
-              " 32,\n",
-              " 33,\n",
-              " 34,\n",
-              " 35,\n",
-              " 36,\n",
-              " 37,\n",
-              " 38,\n",
-              " 39,\n",
-              " 40,\n",
-              " 41,\n",
-              " 42,\n",
-              " 43,\n",
-              " 44,\n",
-              " 45,\n",
-              " 46,\n",
-              " 47,\n",
-              " 48,\n",
-              " 49,\n",
-              " 50,\n",
-              " 51,\n",
-              " 52,\n",
-              " 53,\n",
-              " 54,\n",
-              " 55,\n",
-              " 56,\n",
-              " 57,\n",
-              " 58,\n",
-              " 59,\n",
-              " 60,\n",
-              " 61,\n",
-              " 62,\n",
-              " 63,\n",
-              " 64,\n",
-              " 65,\n",
-              " 66,\n",
-              " 67,\n",
-              " 68,\n",
-              " 69,\n",
-              " 70,\n",
-              " 71,\n",
-              " 72,\n",
-              " 73,\n",
-              " 74,\n",
-              " 75,\n",
-              " 76,\n",
-              " 77,\n",
-              " 78,\n",
-              " 79,\n",
-              " 80,\n",
-              " 81,\n",
-              " 82,\n",
-              " 83,\n",
-              " 84,\n",
-              " 85,\n",
-              " 86,\n",
-              " 87,\n",
-              " 88,\n",
-              " 89,\n",
-              " 90,\n",
-              " 91,\n",
-              " 92,\n",
-              " 93,\n",
-              " 94,\n",
-              " 95,\n",
-              " 96,\n",
-              " 97,\n",
-              " 98,\n",
-              " 99,\n",
-              " 100]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 19
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "pOfSd3mSJ4Pr"
       },
       "source": [
-        "2. So I trained a MLP network with the next architecture:\n",
+        "2. So I trained a MLP network with the next architecture,\n",
         "\n",
-        "- (0): Linear(in_features=784, out_features=512, bias=True)\n",
-        "- (1): ReLU(inplace=True)\n",
-        "- (2): Dropout(p=0.05, inplace=False)\n",
-        "- (3): Linear(in_features=512, out_features=256, bias=True)\n",
-        "- (4): ReLU(inplace=True)\n",
-        "- (5): Dropout(p=0.05, inplace=False)\n",
-        "- (6): Linear(in_features=256, out_features=128, bias=True)\n",
-        "- (7): ReLU(inplace=True)\n",
-        "- (8): Dropout(p=0.05, inplace=False)\n",
-        "- (9): Linear(in_features=128, out_features=64, bias=True)\n",
-        "- (10): ReLU(inplace=True)\n",
-        "- (11): Dropout(p=0.05, inplace=False)\n",
-        "- (12): Linear(in_features=64, out_features=32, bias=True)\n",
-        "- (13): ReLU(inplace=True)\n",
-        "- (14): Dropout(p=0.05, inplace=False)\n",
-        "- (15): Linear(in_features=32, out_features=10, bias=True)\n",
         "\n",
-        "where first I flatten the $28\\times 28$ image into a $784$ long vector. I used a learning rate of $0.001$ and $100$ epochs. There are a lot of hyperparameters that can be optimized in this model: learning rate, amount of dropout, number of units at each layer and so on. But, in the first try I got a $89.49%$ test accuracy, and we can see that the  loss is still droping and the accuracy is not plateau yet, so I could train a bit more epochs and maybe get even better model. But, the goal was $89%$ accuracy and this homework is long, so I didn't optimize the hyperparameters at all. I used data augmentation of random horizontal flip which worked great, although at the begeaning I also tried crop with padding which gave poor results. The poor results of augmentation with crop and padding was not surprising given the fact that all the test set is made of centered and not cropped images (no need to generalize the model over data which is not found in the test set).  "
+        "**Architecture:**\n",
+        "\n",
+        "- Fully-conected ($784\\to512$)\n",
+        "- ReLU\n",
+        "- Dropout ($5$%)\n",
+        "- Fully-conected ($512\\to256$)\n",
+        "- ReLU\n",
+        "- Dropout ($5$%)\n",
+        "- Fully-conected ($256\\to128$)\n",
+        "- ReLU\n",
+        "- Dropout ($5$%)\n",
+        "- Fully-conected ($128\\to64$)\n",
+        "- ReLU\n",
+        "- Dropout ($10$%)\n",
+        "- Fully-conected ($64\\to32$)\n",
+        "- ReLU\n",
+        "- Dropout ($10$%)\n",
+        "- Fully-conected ($32\\to10$)\n",
+        "\n",
+        "where first I flatten the $28\\times 28$ image into a $784$ long vector. The output of the network is of size $10$ because the fashionMNIST dataset has $10$ classes overall. The number of layers and their sizes was chosen with a trail and error method until I got enough good results on the validation set.\n",
+        "\n",
+        "**Hyper-parmeters:**\n",
+        "\n",
+        "- batch size = $32$\n",
+        "- learning rate = $0.00005$\n",
+        "- num epochs = $100$\n",
+        "- whight decay = learning_rate$/110$\n",
+        "- dropouts (shown in the architecture above)\n",
+        "\n",
+        "There wasn't a lot of hyper-parameters optimization because this is an easy dataset. But, the little optimization I had was with respect to the validation set which was independent from the train and test datasets.\n",
+        "\n",
+        "Finally, I got an accurcy larger then $89$% as asked so I stoped there. But, it definitely seems like we could get even better accuracy by taking the hyper-parameters optimization more seriously. Because this is a long homework assignement I didn't take the time to fully optimize the model. \n"
       ]
     },
     {
