--- a/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
+++ b/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
@@ -1251,7 +1251,7 @@
         "np.random.seed(seed)\n",
         "torch.manual_seed(seed)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1400,7 +1400,7 @@
         "    def __repr__(self):\n",
         "        return self.__class__.__name__ + f'mean={self.mean}, std={self.std}'"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1419,7 +1419,7 @@
         "if not os.path.isdir(MNIST_CHECKPOINT_DIR):\n",
         "    os.mkdir(MNIST_CHECKPOINT_DIR)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1452,7 +1452,7 @@
         "\n",
         "    return train_transform, valid_transform, test_transform"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1475,7 +1475,7 @@
         "\n",
         "    return train_dataset, valid_dataset, test_dataset"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1528,7 +1528,7 @@
         "\n",
         "    return train_loader, valid_loader, test_loader"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1556,7 +1556,7 @@
         "    input = (label.item() if type(label) == torch.Tensor else label)\n",
         "    return output_mapping[input]"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1584,7 +1584,7 @@
         "trainloader = torch.utils.data.DataLoader(train_set, batch_size=6, \n",
         "                                          shuffle=False)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1616,7 +1616,7 @@
         "    axes[idx].set_xticks([])\n",
         "    axes[idx].set_yticks([])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1703,7 +1703,7 @@
         "        \n",
         "        return x"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1740,7 +1740,7 @@
         "                             amsgrad=True, \n",
         "                             weight_decay=whight_decay)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1760,7 +1760,7 @@
         "num_trainable_params = sum([p.numel() for p in dummy_model.parameters() if p.requires_grad])\n",
         "print(\"num trainable weights: \", num_trainable_params)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1806,7 +1806,7 @@
         "x = torch.randn(1, 784).to(device) \n",
         "torchviz.make_dot(model(x), params=dict(model.named_parameters()))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1850,7 +1850,7 @@
         "    model_accuracy = total_correct / total_images * 100\n",
         "    return model_accuracy, confusion_matrix"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1867,7 +1867,7 @@
         "    'epochs': [],\n",
         "}"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1930,7 +1930,7 @@
         "    torch.save(state, f'{MNIST_CHECKPOINT_DIR}/{MODEL_NAME}_{epoch}.pth')\n",
         "print('==> Finished Training ...')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2084,7 +2084,7 @@
         "plt.xticks(range(10), CLASSES.values())\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2140,7 +2140,7 @@
         "labs = [l.get_label() for l in lns]\n",
         "ax.legend(lns, labs, loc='upper center', ncol=3, frameon=False, bbox_to_anchor=(0.35, 1.0))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2281,7 +2281,7 @@
         "if not os.path.isdir(SVHN_CHECKPOINT_DIR):\n",
         "    os.mkdir(SVHN_CHECKPOINT_DIR)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2396,7 +2396,7 @@
         "\n",
         "    return train_loader, valid_loader, test_loader"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2417,7 +2417,7 @@
         "                                      target_transform=None, \n",
         "                                      download=True)"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2486,7 +2486,7 @@
         "images, labels = dataiter.next()\n",
         "grid_plot(images, labels)"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2595,7 +2595,7 @@
         "\n",
         "        return x"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2610,7 +2610,7 @@
       "source": [
         "print(SVHN_CNN())"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2658,7 +2658,68 @@
         "id": "WeIMXtWlGqPY"
       },
       "source": [
-        "2. As a first step I used the CFAR-10 network from the tutorial without a change."
+        "2. As a first step I used the CFAR-10 network from the tutorial without a change. The results I got was on the first try, so I didn't had any change to tweak the hyper-parameters and change the network.\n",
+        "\n",
+        "##**Network Architecture:**\n",
+        "\n",
+        "**Convolution layer block 1**\n",
+        "- 2D Convolution - channels: $3\\to32$, kernel: ($3, 3$), stride: ($1, 1$), pad: ($1, 1$)\n",
+        "- 2D Batch norm - features: $32$\n",
+        "- ReLU\n",
+        "- 2D Convolution - channels: $32\\to64$, kernel: ($3, 3$), stride: ($1, 1$), pad: ($1, 1$)\n",
+        "- ReLU\n",
+        "- Max pooling - kernel: $2$, stride: $2$, pad: $0$\n",
+        "\n",
+        "**Convolution layer block 2**\n",
+        "- 2D Convolution - channels: $64\\to128$, kernel: ($3, 3$), stride: ($1, 1$), pad: ($1, 1$)\n",
+        "- 2D Batch norm - features: $128$\n",
+        "- ReLU\n",
+        "- 2D Convolution - channels: $128\\to128$, kernel: ($3, 3$), stride: ($1, 1$), pad: ($1, 1$)\n",
+        "- ReLU\n",
+        "- Max pooling - kernel: $2$, stride: $2$, pad: $0$\n",
+        "- Dropout - $5$%\n",
+        "\n",
+        "**Convolution layer block 3**\n",
+        "- 2D Convolution - channels: $128\\to256$, kernel: ($3, 3$), stride: ($1, 1$), pad: ($1, 1$)\n",
+        "- 2D Batch norm - features: $256$\n",
+        "- ReLU\n",
+        "- 2D Convolution - channels: $256\\to256$, kernel: ($3, 3$), stride: ($1, 1$), pad: ($1, 1$)\n",
+        "- ReLU\n",
+        "- Max pooling - kernel: $2$, stride: $2$, pad: $0$\n",
+        "\n",
+        "\n",
+        "**Fully conected layer block**\n",
+        "- Dropout - $10$%\n",
+        "- Fully conected - $4096\\to1024$\n",
+        "- ReLU\n",
+        "- Fully conected - $1024\\to512$\n",
+        "- ReLU\n",
+        "- Dropout - $10$%\n",
+        "- Fully conected - $512\\to10$\n",
+        "\n",
+        "\n",
+        "## **Hyper parameters**\n",
+        "I started with exactly the same parameters as in the FashionMNIST network before and got great results so I didn't tune them at all.\n",
+        "\n",
+        "- batch size = $32$\n",
+        "- learning rate = $0.00005$\n",
+        "- num epochs = $100$\n",
+        "- wheight decay = learning_rate$/110$\n",
+        "\n",
+        "\n",
+        "## **Data Augmentation**\n",
+        "In this dataset I also used data augmentation, but this time, because number comes in a specific orientation, I didn't use random flip. Instead, I used \n",
+        "\n",
+        "- Random Affine transform\n",
+        "- Color Jitter transform\n",
+        "- Adding Gaussian noise (with probability of p=$0.5$ for each image)\n",
+        "- Normalization with the same parameters from the tutorial\n",
+        "\n",
+        "## **Dimensions**\n",
+        "The input dimension was images with $3$ channels of size $32\\times32$ pixels so $(3, 32, 32)$\n",
+        "\n",
+        "The output dimention was $10$, which is the number of classes in the dataset labels $(0,1,...,9)$.\n",
+        " "
       ]
     },
     {
@@ -2696,7 +2757,7 @@
         "                             amsgrad=True, \n",
         "                             weight_decay=whight_decay)"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2736,7 +2797,7 @@
         "    model_accuracy = total_correct / total_images * 100\n",
         "    return model_accuracy, confusion_matrix"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2753,7 +2814,7 @@
         "    'epochs': [],\n",
         "}"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2816,7 +2877,7 @@
         "    torch.save(state, f'{SVHN_CHECKPOINT_DIR}/{MODEL_NAME}_{epoch}.pth')\n",
         "print('==> Finished Training ...')"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2867,7 +2928,7 @@
         "plt.xticks(range(10), CLASSES.values())\n",
         "plt.show()"
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2923,7 +2984,7 @@
         "labs = [l.get_label() for l in lns]\n",
         "ax.legend(lns, labs, loc='upper center', ncol=3, frameon=False, bbox_to_anchor=(0.35, 1.0))"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
